<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_retry">Ulangi</string>
    <string name="action_see_all">See All</string>

    <string name="app_name">Movies</string>

    <string name="label_duration">Duration</string>
    <string name="label_genre">Genre</string>
    <string name="label_information">Information</string>
    <string name="label_movie">Movie</string>
    <string name="label_oops">Oops..</string>
    <string name="label_original_language">Original Language</string>
    <string name="label_overview">Overview</string>
    <string name="label_review">Reviews</string>
    <string name="label_status">Status</string>
    <string name="label_trailer">Trailer</string>

    <string name="message_empty_movies">No Movies</string>
    <string name="message_empty_reviews">No Reviews</string>
    <string name="message_error_founded">Something error founded</string>

    <string name="sample_date">11 November 2020</string>
    <string name="sample_duration">2h1m</string>
    <string name="sample_genre">Romance, Drama</string>
    <string name="sample_movie_name">Dark Killer</string>
    <string name="sample_original_language">English</string>
    <string name="sample_status">Release</string>
    <string name="sample_vote">4.4</string>
    <string name="message_empty_videos">No Videos</string>
</resources>
