<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_6dp"
    android:elevation="@dimen/dimen_2dp"
    android:layout_margin="@dimen/dimen_4dp"
    app:strokeWidth="@dimen/dimen_1dp"
    app:strokeColor="@color/colorGrey"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/pbPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPoster" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVote"
            style="@style/MovieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_baseline_star_24"
            android:gravity="center"
            android:padding="@dimen/dimen_20dp"
            android:text="@string/sample_vote"
            app:layout_constraintEnd_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/MovieTextView.SubHeader.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvVote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster"
            tools:text="@string/sample_movie_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            style="@style/MovieTextView.Grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvVote"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="@string/sample_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>